changed iframe width to 100% instead of 100vw to fix overflow issue. Added button to Contact page.

--- a/stc-auto/src/app/contact/contact.component.css
+++ b/stc-auto/src/app/contact/contact.component.css
@@ -3,34 +3,38 @@ h1 {
 }
 
 iframe {
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     align-content: space-evenly;
     height: 25vw;
-    width: 100vw;
+    width: 100%;
     border: none;
+    overflow: hidden;
 }
 
 table {
     font-family: "Helvetica Neue";
     border-collapse: collapse;
     float: left;
-    width: 50%;
     justify-content: center;
+    table-layout: fixed;
+    border: 1px solid #e61610;
+    min-height: 300px;
+}
+
+tr {
+    border-top: 1px solid #e61610;
 }
   
 td, th {
-    border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    overflow: hidden;
+    border: 0px;
 }
 
 td > a {
     float: right;
-}
-
-.companyDetail > td {
-    border: 0px;
 }
 
 div {
@@ -40,7 +44,30 @@ div {
     margin-top: 20px;
 }
 
-@media screen and (max-width: 500px) {
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-column-gap: 20%;
+    justify-content: center;
+}
+
+hr {
+    border-color: #e61610;
+    width: 95%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+button {
+    width: 50vw;
+    height: 5vh;
+    max-width: 40%;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+
+@media screen and (max-width: 1100px) {
     iframe {
       width: 100vw;
       height: 40vw;
@@ -54,16 +81,17 @@ div {
         margin-top: 10px;
     }
 
-    tr {
-        display:flex;
-        flex-direction: column;
-    }
-
+    
     td {
         display:flex;
         flex-direction: column;
         text-align: center;
         width: 75vw;
+
+    }
+
+    .grid-container {
+        display: inline;
     }
 }
 
